--- a/posts/2024-07-30-braintree-sql-questions/index.qmd
+++ b/posts/2024-07-30-braintree-sql-questions/index.qmd
@@ -10,12 +10,12 @@ categories: [R, SQL, Quarto] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 #image: sql-r-python.png
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 ---
 
 # Introduction
 
-## Purpose
+The BrainTree SQL coding challenge is known as a great challenge for data analysts looking to test their skills. In this project, I am putting my skills to the test, using Quarto and the `DBI::` and `RSQLite::` packages to run SQL queries on an in-memory database.
 
 ## Setup and data preparation
 
@@ -29,12 +29,30 @@ library(RSQLite)
 
 **About the dataset**:
 
+Here is some text from the BrainTree challenge site:
+
+>This is an opportunity for you to show us your grasp of SQL which plays a key role in the day-to-day job that you're applying for. All members of the Analytics Data team have taken this challenge and participated in its creation. If you feel that there are any questions that are either not fair or not clear, please do let us know; this is VERY important to us!
+
+>A few important things to note before you get started:
+
+>*  All work should be done in SQL. Any variant is fine (e.g. MS SQL, Postgres, MySQL, etc.). If you normally use R, SAS, or other similar tools with SQL it's important that you show that you can work in SQL by itself to produce the correct answers to this challenge.
+*  If you are confused by a specific question, you can request clarification by replying to the message that this challenge was attached to. This is NOT intended for you to obtain technical help with solving the problems on this challenge or asking for hints; it should only be used for question clarification.
+This challenge is due back within 1 week (7 calendar days) of being sent to you.
+*. If you cannot answer a question, please do your best, show your work, leave comments, and let us know your general thoughts.
+*. We are interested in BOTH your answers and the work/code that you write to get them. Please leave plenty of comments for us to read when we review your work.
+*. There are some blank/null values in this set. That's how we found it and it reflects the nature of imperfect data. Please work with this and provide explanations of any issues or workarounds required to arrive at your answers.
+*. There are no intentional gotchas, trick questions, or traps; the challenge is intended to demonstrate some of the typical day-to-day SQL skills that the job requires.
+*. Some of these questions may seem nonsensical and you may find yourself asking, "why would anyone want to know that?!" They are intended purely as a measure of your SQL skills and not as actual questions that we would expect to ask of this type of data set. Please take them with a grain of salt.
+
+
 ```{r read_data, include=TRUE}
 countries <- read_csv('.//data/countries.csv')
 continent_map <- read_csv('.//data/continent_map.csv')
 continents <- read_csv('.//data/continents.csv')
 per_capita <- read_csv('.//data/per_capita.csv')
 ```
+
+
 
 ## Setting up SQL to execute
 
