cleaning up formatting

--- a/posts/2024-07-30-braintree-sql-questions/index.qmd
+++ b/posts/2024-07-30-braintree-sql-questions/index.qmd
@@ -31,21 +31,19 @@ library(RSQLite)
 
 Here is some text from the BrainTree challenge site:
 
->This is an opportunity for you to show us your grasp of SQL which plays a key role in the day-to-day job that you're applying for. All members of the Analytics Data team have taken this challenge and participated in its creation. If you feel that there are any questions that are either not fair or not clear, please do let us know; this is VERY important to us!
-
->A few important things to note before you get started:
+>This is an opportunity for you to show us your grasp of SQL which plays a key role in the day-to-day job that you're applying for. All members of the Analytics Data team have taken this challenge and participated in its creation. If you feel that there are any questions that are either not fair or not clear, please do let us know; this is VERY important to us! A few important things to note before you get started:
 
 >*  All work should be done in SQL. Any variant is fine (e.g. MS SQL, Postgres, MySQL, etc.). If you normally use R, SAS, or other similar tools with SQL it's important that you show that you can work in SQL by itself to produce the correct answers to this challenge.
 *  If you are confused by a specific question, you can request clarification by replying to the message that this challenge was attached to. This is NOT intended for you to obtain technical help with solving the problems on this challenge or asking for hints; it should only be used for question clarification.
 This challenge is due back within 1 week (7 calendar days) of being sent to you.
-*. If you cannot answer a question, please do your best, show your work, leave comments, and let us know your general thoughts.
-*. We are interested in BOTH your answers and the work/code that you write to get them. Please leave plenty of comments for us to read when we review your work.
-*. There are some blank/null values in this set. That's how we found it and it reflects the nature of imperfect data. Please work with this and provide explanations of any issues or workarounds required to arrive at your answers.
-*. There are no intentional gotchas, trick questions, or traps; the challenge is intended to demonstrate some of the typical day-to-day SQL skills that the job requires.
-*. Some of these questions may seem nonsensical and you may find yourself asking, "why would anyone want to know that?!" They are intended purely as a measure of your SQL skills and not as actual questions that we would expect to ask of this type of data set. Please take them with a grain of salt.
+*  If you cannot answer a question, please do your best, show your work, leave comments, and let us know your general thoughts.
+*  We are interested in BOTH your answers and the work/code that you write to get them. Please leave plenty of comments for us to read when we review your work.
+*  There are some blank/null values in this set. That's how we found it and it reflects the nature of imperfect data. Please work with this and provide explanations of any issues or workarounds required to arrive at your answers.
+*  There are no intentional gotchas, trick questions, or traps; the challenge is intended to demonstrate some of the typical day-to-day SQL skills that the job requires.
+*  Some of these questions may seem nonsensical and you may find yourself asking, "why would anyone want to know that?!" They are intended purely as a measure of your SQL skills and not as actual questions that we would expect to ask of this type of data set. Please take them with a grain of salt.
 
 
-```{r read_data, include=TRUE}
+```{r read_data, include=TRUE, message=FALSE, warning=FALSE}
 countries <- read_csv('.//data/countries.csv')
 continent_map <- read_csv('.//data/continent_map.csv')
 continents <- read_csv('.//data/continents.csv')
@@ -107,7 +105,7 @@ The list should include the columns:
 * country_name
 * growth_percent
 
->>For this question, there are two elements of data cleaning:
+For this question, there are two elements of data cleaning:
 
 * To list the **countries** and their ranking, I filtered out the many country codes that actually represented regions or country income groupings.
 * The `continent_name` is NA for North America, and I wanted to generate the results in a cleaner way.
@@ -389,7 +387,7 @@ from rank
 where rank_gdp_per_capita = 1
 ```
 
-```{sql question7_test, connection="con", include=TRUE}
+```{sql question7_test, connection="con", include=FALSE}
 select  *
 from per_capita
 where country_code = 'SYC'
