--- a/posts/2024-07-30-braintree-sql-questions/index.qmd
+++ b/posts/2024-07-30-braintree-sql-questions/index.qmd
@@ -6,7 +6,7 @@ author:
     url: https://mrafa3.github.io/
     #orcid: 0000-0002-5300-3075
 date: 07-30-2024
-categories: [R, SQL, Quarto] # self-defined categories
+categories: [SQL, Quarto] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: query.png
