turning off draft

--- a/posts/2024-08-02-mapboxgl-exploration/index.qmd
+++ b/posts/2024-08-02-mapboxgl-exploration/index.qmd
@@ -10,7 +10,7 @@ categories: [R, tidyverse, mapping] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: map_example.png
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 editor: 
   markdown: 
     wrap: 72
