--- a/posts/2024-08-02-mapboxgl-exploration/index.qmd
+++ b/posts/2024-08-02-mapboxgl-exploration/index.qmd
@@ -10,13 +10,13 @@ categories: [R, tidyverse, mapping] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: map_example.png
-draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 editor: 
   markdown: 
     wrap: 72
 ---
 
-[!Muggins Mountain Wilderness](example_map.png){width=300}
+![](map_example.png){width=800}
 
 # Introduction
 
@@ -42,27 +42,23 @@ Steps:
 4.  Render the map as shown in the demo.
 
 ```{r initial_map, include=TRUE, message=FALSE, warning=FALSE}
-mapboxgl(
-  style = mapbox_style('satellite-streets'),
-  center = c(-114.26608, 32.7213),
-  zoom = 14,
-  pitch = 80,
-  bearing = 41
-) |>
-  add_raster_dem_source(
-    id = 'mapbox-dem',
-    url = 'mapbox://mapbox.mapbox-terrain-dem-v1',
-    tileSize = 512,
-    maxzoom = 14
-  ) |>
-  set_terrain(
-    source = 'mapbox-dem',
-    exaggeration = 1.5
-  )
-  
+# mapboxgl(
+#   style = mapbox_style('satellite-streets'),
+#   center = c(-114.26608, 32.7213),
+#   zoom = 14,
+#   pitch = 80,
+#   bearing = 41
+# ) |>
+#   add_raster_dem_source(
+#     id = 'mapbox-dem',
+#     url = 'mapbox://mapbox.mapbox-terrain-dem-v1',
+#     tileSize = 512,
+#     maxzoom = 14
+#   ) |>
+#   set_terrain(
+#     source = 'mapbox-dem',
+#     exaggeration = 1.5
+#   )
 ```
 
-There's also functionality to overlay data (such as Census data), which would be a neat continuation.
-
-
-
+There's also functionality to overlay data (such as Census data), which would be a neat continuation. Soon, I'd like to use this to map Mount Blue Sky -- our most recent 14er hike in Colorado!
