--- a/posts/2024-08-02-mapboxgl-exploration/index.qmd
+++ b/posts/2024-08-02-mapboxgl-exploration/index.qmd
@@ -10,7 +10,7 @@ categories: [R, tidyverse, mapping] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: map_example.png
-draft: true # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
+draft: false # setting this to `true` will prevent your post from appearing on your listing page until you're ready!
 editor: 
   markdown: 
     wrap: 72
@@ -42,6 +42,7 @@ Steps:
 4.  Render the map as shown in the demo.
 
 ```{r initial_map, include=TRUE, message=FALSE, warning=FALSE}
+# commenting out code as it doesn't render on Github pages, but it works in Quarto
 # mapboxgl(
 #   style = mapbox_style('satellite-streets'),
 #   center = c(-114.26608, 32.7213),
@@ -61,4 +62,8 @@ Steps:
 #   )
 ```
 
-There's also functionality to overlay data (such as Census data), which would be a neat continuation. Soon, I'd like to use this to map Mount Blue Sky -- our most recent 14er hike in Colorado!
+Some further pieces still to figure out:
+
+1.  It looks like I'm unable to render the interactive map on my Github pages site (I receive an error that it's not an in-memory calc).
+2.  There's also functionality to overlay data (such as Census data), which would be a neat continuation to explore. 
+3.  Soon, I'd like to use this to map Mount Blue Sky -- our most recent 14er hike in Colorado!
