updating page metadata

--- a/posts/2024-07-30-braintree-sql-questions/index.qmd
+++ b/posts/2024-07-30-braintree-sql-questions/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Braintree SQL challenge"
+title: "BrainTree SQL challenge"
 description: "This post works through the SQL challenges used by PayPal"
 author:
   - name: Mickey Rafa
